--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
         </div>
     </section>
 
+    <section class="tasks-counter">
+        <div class="container">
+            <h2>My Tasks Counter</h2>
+
+            <div class="count" id="counter">
+                0
+            </div>
+
+            <div class="buttons">
+                <button class="btn" id="decBtn">Decrement</button>
+                <button class="btn" id="reset">Reset</button>
+                <button class="btn" id="incBtn">Increment</button>
+            </div>
+        </div>
+    </section>
+
     <script src="./js/app.js"></script>
 </body>      
 </html>     
