--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             <div class="tasks">
                 <input type="text" id="txt" name="programming-lang" /> 
 
-                <button class="btn" id="add" onclick="addItem()">Add</button>
+                <button class="btn" id="add" onclick="addTask()">Add</button>
                 <button class="btn" onclick="removeItem()">Remove</button>
             </div>
 
             <ul id="list">
-                    
+                
             </ul>
         </div>
     </section>
