--- a/index.html
+++ b/index.html
@@ -46,6 +46,92 @@
         </div>
     </section>
 
+    <section class="accordition-section">
+        <div class="container">
+            <div class="accordition">
+                <div class="item">
+                    <h3 class="item-title">
+                        <button>
+                            +
+                        </button>
+
+                        why this term?
+                    </h3>
+
+                    <div class="content">
+                        <p>
+                            Several windows are stacked on each other. All of them are "shaded", so only their captions are visible. If one of them is clicked, to make it active, it is "unshaded" or "maximized". Other windows in accordion are displaced around top or bottom edge.
+                        </p>
+
+                        <a href="">
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <h3 class="item-title">
+                        <button>
+                            +
+                        </button>
+
+                        When to use accordion components?
+                    </h3>
+
+                    <div class="content">
+                        <p>
+                            Several windows are stacked on each other. All of them are "shaded", so only their captions are visible. If one of them is clicked, to make it active, it is "unshaded" or "maximized". Other windows in accordion are displaced around top or bottom edge.
+                        </p>
+
+                        <a href="">
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <h3 class="item-title">
+                        <button>
+                            +
+                        </button>
+
+                        How can it be defined?
+                    </h3>
+
+                    <div class="content">
+                        <p>
+                            Several windows are stacked on each other. All of them are "shaded", so only their captions are visible. If one of them is clicked, to make it active, it is "unshaded" or "maximized". Other windows in accordion are displaced around top or bottom edge.
+                        </p>
+
+                        <a href="">
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <h3 class="item-title">
+                        <button>
+                            +
+                        </button>
+
+                        When to use accordion components?
+                    </h3>
+
+                    <div class="content">
+                        <p>
+                            Several windows are stacked on each other. All of them are "shaded", so only their captions are visible. If one of them is clicked, to make it active, it is "unshaded" or "maximized". Other windows in accordion are displaced around top or bottom edge.
+                        </p>
+
+                        <a href="">
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="./js/app.js"></script>
 </body>      
 </html>     
